# fiox

./: Cargo.toml
src/: main.rs
src/tests/: json_tests.rs  toml_tests.rs
src/utils/: cli.rs  mod.rs  utilities.rs
src/utils/decoders/: csv_decoder.rs  json_decoder.rs  mod.rs  toml_decoder.rs
src/utils/readers/: csv_reader.rs  json_reader.rs  toml_reader.rs  txt_reader.rs
src/utils/validators/: csv_validator.rs  ndjson_validator.rs  toml_validator.rs
src/utils/writers/: csv_writer.rs  toml_writer.rs  write_json.rs
