[package]
name = "fiox"
version = "0.1.0"
edition = "2024"
[workspace.metadata.clippy]
deny-warnings = true
[dependencies]
mimalloc = "0.1.48"
clap = { version = "4.5.53", features = ["derive"] }
serde = "1.0.228"
serde_json = "1.0.145"
toml = "0.9.8"
colored = "3.0.0"
tempfile = "3.23.0"
csv = "1.4.0"
